--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.1.0+cu121
-torchvision==0.16.0+cu121
+torch==2.1.1
+torchvision==0.16.1
 opencv-python==4.8.1.78
 lpips==0.1.4
 pandas==2.1.1
