--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch==2.1.2
-torchvision==0.16.2
+# torch==2.1.2
+# torchvision==0.16.2
 opencv-python==4.8.1.78
 lpips==0.1.4
 pandas==2.1.4
 matplotlib==3.8.2
+git+https://github.com/VTON-Project/Body_Segmentation_DensePose@main
