--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ lpips==0.1.4
 pandas==2.1.4
 matplotlib==3.8.2
 git+https://github.com/VTON-Project/Body_Segmentation_DensePose@main
+gunicorn==21.2.0
+uvicorn[standard]==0.27.1
+fastapi==0.110.0
