--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ git+https://github.com/VTON-Project/Body_Segmentation_DensePose@main
 gunicorn==21.2.0
 uvicorn[standard]==0.27.1
 fastapi==0.110.0
+python-multipart==0.0.9
